# script3025

./: .clang-tidy  .gitignore  CMakeLists.txt  GEMINI.md  README.md  check-clang-tidy  debugging.md  format  hurkens.s3025  kitty-layout  lint  lint-fix  minimum.s3025  sanity.txt  test_1.s3025
.githooks/: pre-commit
examples/: classical.s3025  glivenko.s3025  hurkens.s3025  standard.s3025
parser/: CMakeLists.txt  README.md
parser/include/: parser.hpp
parser/test/: parser_test.cpp
script3025_bin/: CMakeLists.txt
script3025_bin/src/: main.cpp
script3025_core/: CMakeLists.txt  README.md
script3025_core/include/: application_expression.hpp  cloning_visitor.hpp  cst_transformers.hpp  definition.hpp  equality_visitor.hpp  expression.hpp  expression_factory.hpp  expression_visitor.hpp  id_expression.hpp  inductive_definition.hpp  lambda_expression.hpp  lazy_reduction_visitor.hpp  let_expression.hpp  parsing_utility.hpp  pi_expression.hpp  program.hpp  reference_stack.hpp  replacing_visitor.hpp  script3025_core.hpp  stringify_visitor.hpp  token.hpp
script3025_core/include/expression/: expression.hpp  expression_base.hpp  expression_visitor.hpp  variable_reference.hpp
script3025_core/include/expression/subtypes/: application_expression.hpp  equality_expression.hpp  id_expression.hpp  induction_keyword_expression.hpp  keyword_expression.hpp  lambda_expression.hpp  let_expression.hpp  nat_keyword_expression.hpp  nat_literal_expression.hpp  pi_expression.hpp  reflexive_keyword_expression.hpp  replace_keyword_expression.hpp  scope_expression.hpp  succ_keyword_expression.hpp  type_keyword_expression.hpp
script3025_core/include/expression/visitors/: cloning_visitor.hpp  equality_visitor.hpp  lazy_reduction_visitor.hpp  normalizing_visitor.hpp  replacing_visitor.hpp  scope_hygiene_visitor.hpp  scope_walking_visitor.hpp  stringify_visitor.hpp  type_gen_visitor.hpp  type_keyword_format_visitor.hpp
script3025_core/src/: application_expression.cpp  cloning_visitor.cpp  cst_transformers.cpp  definition.cpp  equality_visitor.cpp  expression.cpp  expression_factory.cpp  expression_visitor.cpp  id_expression.cpp  inductive_definition.cpp  lambda_expression.cpp  lazy_reduction_visitor.cpp  let_expression.cpp  parsing_utility.cpp  pi_expression.cpp  program.cpp  replacing_visitor.cpp  script3025_core.cpp  token.cpp
script3025_core/src/expression/: expression_base.cpp  expression_visitor.cpp
script3025_core/src/expression/subtypes/: application_expression.cpp  equality_expression.cpp  id_expression.cpp  induction_keyword_expression.cpp  lambda_expression.cpp  let_expression.cpp  nat_keyword_expression.cpp  nat_literal_expression.cpp  pi_expression.cpp  reflexive_keyword_expression.cpp  replace_keyword_expression.cpp  succ_keyword_expression.cpp  type_keyword_expression.cpp
script3025_core/src/expression/visitors/: cloning_visitor.cpp  equality_visitor.cpp  lazy_reduction_visitor.cpp  normalizing_visitor.cpp  partial_clone_visitor.cpp  partial_clone_visitor.hpp  replacing_visitor.cpp  stringify_visitor.hpp  type_gen_visitor.cpp
script3025_core/test/: reference_stack_test.cpp  script3025_core_test.cpp
script3025_logger/: CMakeLists.txt
script3025_logger/include/: get_logger.hpp  logger3025.hpp
script3025_logger/src/: logger3025.cpp
